@@ -27,8 +27,8 @@
 #include "cinema.h"
 #include "util.h"
 #include "cross.h"
+#include "raw_convert.h"
 #include <dcp/colour_matrix.h>
-#include <dcp/raw_convert.h>
 #include <dcp/signer.h>
 #include <dcp/certificate_chain.h>
 #include <libcxml/cxml.h>
@@ -52,7 +52,6 @@ using std::cerr;
 using boost::shared_ptr;
 using boost::optional;
 using boost::algorithm::trim;
-using dcp::raw_convert;
 
 Config* Config::_instance = 0;
 
