@@ -17,16 +17,15 @@
 
 */
 
+#include "types.h"
+#include "raw_convert.h"
 #include <libxml++/libxml++.h>
 #include <libcxml/cxml.h>
-#include <dcp/raw_convert.h>
-#include "types.h"
 
 using std::max;
 using std::min;
 using std::string;
 using boost::shared_ptr;
-using dcp::raw_convert;
 
 bool operator== (Crop const & a, Crop const & b)
 {
